--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-firebase/app": "^14.7.0",
+    "@react-native-firebase/auth": "^14.7.0",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
     "react": "17.0.2",
