--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -26,3 +26,7 @@ android.enableJetifier=true
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.99.0
+MYAPP_UPLOAD_STORE_FILE=playGuardaditos.keystore
+MYAPP_UPLOAD_KEY_ALIAS=playGuardaditos
+MYAPP_UPLOAD_STORE_PASSWORD=guardaditos123
+MYAPP_UPLOAD_KEY_PASSWORD=guardaditos123
