--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
+    "native-abort-controller": "^1.0.4",
     "react": "17.0.2",
     "react-native": "0.67.4",
     "react-native-image-picker": "^4.8.3",
